# computer_vision

./: CMakeLists.txt  README.md  gaussian.cpp  main.cpp
CascadeClassificationKMeans/: CMakeLists.txt  main.cpp
CascadeClassificationKMeans/doc/: report.tex
CascadeClassificationKMeans/doc/latex/auxil/: .gitignore
CascadeClassificationKMeans/doc/latex/tex/: preamble.tex  project_instructions.tex
CascadeClassificationKMeans/src/: ConsolePrinter.cpp  ConsolePrinter.h  ImageRepo.cpp  ImageRepo.h  ImageStats.h  ImageTools.cpp  ImageTools.h  Main.cpp  Main.h  MatTools.cpp  MatTools.h  Thresholding.cpp  Thresholding.h
LearningOpenCV/: CMakeLists.txt
LearningOpenCV/examples/ejemplos/: Makefile  run3.sh  simple  simple.cpp
LearningOpenCV/examples/ejemplos/Thresholding/: encuentraUmbral.cpp  histograma.cpp
LearningOpenCV/old/Ejemplos_Para_Proyecto/: Mahalanobis.wxmx  Makefile  dMahalanobis.cpp  ejemploCIE-Lab.cpp
LearningOpenCV/old/Thresholding/: Makefile  histograma.cpp  histograma.h
LearningOpenCV/old/ejercicio1/: Makefile
LearningOpenCV/old/example2/: ejemplo2  ejemplo2.cpp
LearningOpenCV/src/Histogram/: Histogram.cpp  Histogram.h
auxil/: CascadeClassificationKMeans.aux  CascadeClassificationKMeans.toc  report.aux
chessboard_camera_calibration/: CMakeLists.txt  main.cpp  main2.cpp  main_test.cpp  main_test2.cpp  main_test3  main_test3.cpp  main_test4.cpp  test2.ipynb  tools.h  vcpkg.json
chessboard_camera_calibration/.ipynb_checkpoints/: test2-checkpoint.ipynb
chessboard_camera_calibration/octave/: GramSchmidt.m  octave-workspace
chessboard_camera_calibration/src/: MyClass.cpp  MyClass.h
doc/: CascadeClassificationKMeans.tex  CascadeClassificationKMeans2.tex  report.tex
doc/latex/: abstract.tex  procedure.tex  proof.tex
doc/latex/tex/: conclusion.tex  preamble.tex  procedure.tex  project_instructions.tex  proof.tex  solution.tex
ejemplos/: Makefile  ejemplo3  ejemplo3.cpp
ejemplosVC/: Makefile  ejemplo3.cpp
ejercicio1/: ej1  ej1.sh  test_image.pgm
examples/ejemplos/: ejemplo22.cpp
examples/ejemplos/Thresholding/: gaussianIntersection.h
examples/ejercicio1/: ej1.cpp
gaussian/: CMakeLists.txt  main.cpp  vcpkg.json
gaussian/octave/Gaussian/: LEEME.md  derGKernel.m  derGaussian.m  gaussian.m
gaussian_function_equivalence_proof/: GaussianEquivalenceProof.tex
old/Thresholding/: encuentraUmbral.cpp  gaussianIntersection.cpp
old/ejercicio1/: ej1
plane_tracker/: CMakeLists.txt  config.h  functions.h  plane_tracker.h  plane_tracker_main.cpp  tools.h
plane_tracker/.run/: plane_tracker_cam.run.xml  test_fame.run.xml  test_get_original_corners.run.xml
plane_tracker/media/: .gitignore
plane_tracker/octave/: octave-workspace  test.m
plane_tracker/octave/PruebaCV/: Proceso.m  fixHomoPts.m  frames.txt  gramSchmidt2.m  plotAxis.m  pts.txt
plane_tracker/python/: fix_data.py  iK_original_corners.txt  iK_original_corners_fix.txt  original_corners.txt  original_corners_fix.txt  plot_original_corners.py  test.py  test_p.py
plane_tracker/tests/: 0_generate_matrices.cpp  1_generate_corners_original.cpp  1_generate_original_corners.cpp  2_plot_corners_original.py  2_plot_original_corners.py  3_find_corners_fame.cpp  4_plot_corners_fame.py  4_plot_corners_fame_pixel.py  5_plot_corners_fame.py  5_plot_corners_fame_meter.py  check_matriz.py  main_test.cpp  main_test3.cpp  plot_corners_found.py  plot_original_corners.py  test.m  test_fame.cpp  test_get_original_corners.cpp  test_gram_schmidt_orthogonalization.cpp  test_print_matriz.cpp
plane_tracker/tests/data/: K.txt  cornersOriginalPixelM.txt  iK_OriginalCornersM.txt  iK_originalCornersMat.txt  iiK.txt  originalCornersM.txt  originalCornersMat.txt
plane_tracker/tests/data/f/: G.txt  H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  R.txt  T.txt  X2d.txt  _solvePnP_g.txt  _solvePnP_r.txt  _solvePnP_t.txt  axis2dPixelM.txt  corners_fount_meter.txt  corners_fount_pixel.txt
plane_tracker/tests/data/f1/: G.txt  H_0_initial.txt  T.txt  corners_found_pixel.txt
plane_tracker/tests/data/f2/: G.txt  H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  R.txt  T.txt  corners_found_meter.txt  corners_found_pixel.txt
plane_tracker/tests/data/f240/: H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  corners_found_meter.txt  corners_found_pixel.txt
plane_tracker/tests/data/f3/: G.txt  H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  R.txt  T.txt  corners_found_meter.txt  corners_found_pixel.txt
plane_tracker/tests/data/f4/: G.txt  H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  R.txt  T.txt  corners_found_meter.txt  corners_found_pixel.txt
plane_tracker/tests/data/f5/: G.txt  H_0_initial.txt  H_1_normalized.txt  H_2_orthogonalized.txt  R.txt  T.txt  corners_found_meter.txt  corners_found_pixel.txt
rango_de_r/: dayan_bravo-rango_de_r.tex
src/: GeometricTransformation.cpp  GeometricTransformation.h  History.cpp  History.h  ImageRepo.cpp  ImageRepo.h  ImageStats.h  MatTools.cpp  MatTools.h  Thresholding.cpp  Thresholding.h
src/Thresholding/: Thresholding.cpp
